# SophisticatedFrayedDatabase

./: .gitignore  .replit  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.upm/: store.json
app/: report_server.py  reports.service  service_script.sh  utils.py
reports/: app.py  utils.py
reports/templates/: report.html
