[tool.poetry]
name = "Reports - LRN Serve"
version = "0.1.0"
description = ""
authors = ["Terry Brooks, jr."]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
boto3 = "1.34.59"
botocore = "1.34.59"
doppler-env = "0.3.1"
jinja2 = "3.1.3"
jmespath = "1.0.1"
loguru = "0.7.2"
markupsafe = "2.1.5"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
s3transfer = "0.10.0"
six = "1.16.0"
urllib3 = "2.0.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"